User Module till 6 June 2018

--- a/app/src/main/res/layout/fragment_book_request_service.xml
+++ b/app/src/main/res/layout/fragment_book_request_service.xml
@@ -332,7 +332,7 @@
             <!--  <include layout="@layout/horizontal_images_items"/>-->
             <com.ingic.ezhalbatek.ui.views.CustomRecyclerView
                 android:id="@+id/addimages"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/x10"
