--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,4 +47,6 @@
     <color name="app_font_gray">#5f5b5c</color>
     <color name="app_font_dark_gray">#494648</color>
     <color name="app_blue">#3d5fe8</color>
+    <color name="app_font_black">#282828</color>
+    <color name="camera_color">#d2d2d2</color>
 </resources>
