User Module Alpha Complete

--- a/app/src/main/res/drawable/pinborder.xml
+++ b/app/src/main/res/drawable/pinborder.xml
@@ -10,5 +10,6 @@
     <corners android:radius="@dimen/x10"
         >
     </corners>
+    <size android:width="@dimen/x40" android:height="@dimen/x40"/>
 
 </shape>
