--- a/app/src/main/res/layout/fragment_package_detail.xml
+++ b/app/src/main/res/layout/fragment_package_detail.xml
@@ -37,14 +37,14 @@
                     android:paddingStart="@dimen/x10"
                     android:text="12 Months Package"
                     android:textColor="@color/app_font_dark_gray"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x15"
                     app:typeface="@string/font_normal_dark"/>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginBottom="@dimen/x10"
-                    android:layout_marginTop="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
                     android:background="@color/app_font_dark_gray"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -52,10 +52,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:gravity="center"
-                    android:padding="@dimen/x10"
+                    android:paddingStart="@dimen/x10"
                     android:text="@string/facilities"
                     android:textColor="@color/app_red"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_normal_dark"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -65,7 +65,7 @@
                     android:layout_marginBottom="@dimen/x10"
                     android:layout_marginEnd="@dimen/x10"
                     android:layout_marginStart="@dimen/x10"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     android:text="@string/lorem_ipsum"
                     app:typeface="@string/font_normal_dark"/>
 
@@ -84,7 +84,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/subscription_price"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -95,15 +95,15 @@
                         android:gravity="center"
                         android:text="AED 500"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginBottom="@dimen/x10"
-                    android:layout_marginTop="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
                     android:background="@color/app_font_dark_gray"/>
 
                 <LinearLayout
@@ -121,7 +121,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/customer_name"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -132,7 +132,7 @@
                         android:gravity="center"
                         android:text="Graham Bill"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -152,7 +152,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/subscriber_id"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -163,7 +163,7 @@
                         android:gravity="center"
                         android:text="01"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -183,7 +183,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/address"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -194,7 +194,7 @@
                         android:gravity="center"
                         android:text="Dubai Marina, Near Marina"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -214,7 +214,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/phone_number"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -225,8 +225,8 @@
                         android:gravity="center"
                         android:text="+971 xx xxxxxx"
                         android:textColor="@color/app_blue"
-                        android:textSize="@dimen/x16"
-                        app:typeface="@string/font_bold"/>
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_normal_dark"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -246,7 +246,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/customer_email"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -257,7 +257,7 @@
                         android:gravity="center"
                         android:text="graham@gmail.com"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
             </LinearLayout>
