--- a/app/src/main/res/layout/row_item_service.xml
+++ b/app/src/main/res/layout/row_item_service.xml
@@ -30,14 +30,14 @@
                 android:paddingStart="@dimen/x10"
                 android:text="Short Circuit Problem"
                 android:textColor="@color/app_font_dark_gray"
-                android:textSize="@dimen/x16"
+                android:textSize="@dimen/x15"
                 app:typeface="@string/font_normal_dark"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:layout_marginBottom="@dimen/x10"
-                android:layout_marginTop="@dimen/x10"
+                android:layout_marginBottom="@dimen/x5"
+                android:layout_marginTop="@dimen/x5"
                 android:background="@color/app_font_dark_gray"/>
 
             <LinearLayout
@@ -56,7 +56,7 @@
                     android:paddingStart="@dimen/x10"
                     android:text="@string/technician_name"
                     android:textColor="@color/app_red"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_normal_dark"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -67,7 +67,7 @@
                     android:gravity="center"
                     android:text="Curtis"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_bold"/>
             </LinearLayout>
 
@@ -87,7 +87,7 @@
                     android:paddingStart="@dimen/x10"
                     android:text="@string/technician_number"
                     android:textColor="@color/app_red"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_normal_dark"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -99,15 +99,15 @@
                     android:maxLines="1"
                     android:text="+971 xx xxx xxxx"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/x16"
-                    app:typeface="@string/font_bold"/>
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
             </LinearLayout>
 
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/x40"
                 android:layout_margin="@dimen/x10"
                 android:orientation="horizontal">
 
