--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="wrap_content"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_marginStart="@dimen/x30"
+              android:layout_marginEnd="@dimen/x30"
               android:layout_gravity="center"
               android:gravity="center"
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
@@ -18,7 +20,7 @@
         >
 
         <LinearLayout
-            android:layout_width="@dimen/x300"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingEnd="@dimen/x10"
