--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -1,142 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="@dimen/x20">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/x10"
-        android:layout_marginBottom="@dimen/x10"
-        android:src="@drawable/logo"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x40"
-        android:layout_marginTop="@dimen/x20"
-        android:background="@drawable/btn"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:src="@drawable/email"/>
-
-        <com.ingic.ezhalbatek.ui.views.AnyEditTextView
-            android:id="@+id/edt_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:background="@null"
-            android:hint="@string/user_name"
-            android:imeOptions="actionNext"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:textColor="@color/app_font_gray"
-            android:textColorHint="@color/app_font_gray"
-            android:textSize="@dimen/x14"
-            app:typeface="@string/font_normal"/>
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x40"
-        android:layout_marginTop="@dimen/x10"
-        android:background="@drawable/btn"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:src="@drawable/phone"/>
-
-        <com.ingic.ezhalbatek.ui.views.AnyEditTextView
-            android:id="@+id/edtPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:background="@null"
-            android:hint="@string/contact_number"
-            android:imeOptions="actionNext"
-            android:inputType="phone"
-            android:maxLength="16"
-            android:maxLines="1"
-            android:textColor="@color/app_font_gray"
-            android:textColorHint="@color/app_font_gray"
-            android:textSize="@dimen/x14"
-            app:typeface="@string/font_normal"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x40"
-        android:layout_marginTop="@dimen/x10"
-        android:background="@drawable/btn"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:src="@drawable/address"/>
-
-        <com.ingic.ezhalbatek.ui.views.AutoCompleteLocation
-            android:id="@+id/edtCity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/x10"
-            android:background="@null"
-            android:hint="@string/phone"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textColor="@color/app_font_gray"
-            android:textColorHint="@color/app_font_gray"
-            android:textSize="@dimen/x14"
-            app:hint_text="@string/address_request"
-            app:typeface="@string/font_normal"/>
-    </LinearLayout>
-
-    <com.ingic.ezhalbatek.ui.views.AnyEditTextView
-        android:id="@+id/edtQuery"
-        style="@style/form_edttext_fields_style"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x100"
-        android:layout_marginTop="@dimen/x10"
-        android:background="@drawable/btn"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="@string/query_hint"
-        android:imeOptions="actionDone"
-        android:inputType="textMultiLine"
-        android:maxHeight="@dimen/x100"
-        android:overScrollMode="always"
-        android:padding="@dimen/x10"
-        android:scrollbarStyle="insideInset"
-        android:scrollbars="vertical"
-        android:textColor="@color/app_font_gray"
-        android:textColorHint="@color/app_font_gray"
-        app:typeface="@string/font_normal"/>
-    <Button
-        android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="@dimen/x10"
-        android:background="@drawable/button_red"
-        android:text="@string/submit"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/x10"
+            android:layout_marginTop="@dimen/x10"
+            android:src="@drawable/logo"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/x40"
+            android:layout_marginTop="@dimen/x20"
+            android:background="@drawable/btn"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:src="@drawable/username"/>
+
+            <com.ingic.ezhalbatek.ui.views.AnyEditTextView
+                android:id="@+id/edt_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:background="@null"
+                android:hint="@string/user_name"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:textColor="@color/app_font_gray"
+                android:textColorHint="@color/app_font_gray"
+                android:textSize="@dimen/x14"
+                app:typeface="@string/font_normal"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/x40"
+            android:layout_marginTop="@dimen/x10"
+            android:background="@drawable/btn"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:src="@drawable/phone"/>
+
+            <com.ingic.ezhalbatek.ui.views.AnyEditTextView
+                android:id="@+id/edtPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:background="@null"
+                android:hint="@string/contact_number"
+                android:imeOptions="actionNext"
+                android:inputType="phone"
+                android:maxLength="16"
+                android:maxLines="1"
+                android:textColor="@color/app_font_gray"
+                android:textColorHint="@color/app_font_gray"
+                android:textSize="@dimen/x14"
+                app:typeface="@string/font_normal"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/x40"
+            android:layout_marginTop="@dimen/x10"
+            android:background="@drawable/btn"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:src="@drawable/address"/>
+
+            <com.ingic.ezhalbatek.ui.views.AnyEditTextView
+                android:id="@+id/edtCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/x10"
+                android:background="@null"
+                android:hint="@string/address_request"
+                android:imeOptions="actionNext"
+                android:inputType="textPostalAddress"
+                android:maxLines="1"
+                android:textColor="@color/app_font_gray"
+                android:textColorHint="@color/app_font_gray"
+                android:textSize="@dimen/x14"
+                app:hint_text="@string/address_request"
+                app:typeface="@string/font_normal"/>
+        </LinearLayout>
+
+        <com.ingic.ezhalbatek.ui.views.AnyEditTextView
+            android:id="@+id/edtQuery"
+            style="@style/form_edttext_fields_style"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/x100"
+            android:layout_marginTop="@dimen/x10"
+            android:background="@drawable/btn"
+            android:ems="10"
+            android:gravity="top"
+            android:hint="@string/query_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textMultiLine"
+            android:maxHeight="@dimen/x100"
+            android:overScrollMode="always"
+            android:padding="@dimen/x10"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="vertical"
+            android:textColor="@color/app_font_gray"
+            android:textColorHint="@color/app_font_gray"
+            app:typeface="@string/font_normal"/>
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="@dimen/x10"
+            android:background="@drawable/button_red"
+            android:text="@string/submit"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+</ScrollView>
