--- a/app/src/main/res/layout/fragment_job_report.xml
+++ b/app/src/main/res/layout/fragment_job_report.xml
@@ -37,14 +37,14 @@
                     android:paddingStart="@dimen/x10"
                     android:text="Monthly Maintenance"
                     android:textColor="@color/app_font_dark_gray"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x15"
                     app:typeface="@string/font_normal_dark"/>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginBottom="@dimen/x10"
-                    android:layout_marginTop="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
                     android:background="@color/app_font_dark_gray"/>
 
                 <LinearLayout
@@ -62,7 +62,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/service_id"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -73,7 +73,7 @@
                         android:gravity="center"
                         android:text="01"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -93,7 +93,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/date"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -104,7 +104,7 @@
                         android:gravity="center"
                         android:text="January 2017"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -124,7 +124,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/visit_made"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -135,7 +135,7 @@
                         android:gravity="center"
                         android:text="21 January 2017"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -155,7 +155,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/time_duration"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -166,15 +166,15 @@
                         android:gravity="center"
                         android:text="3 hour"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginBottom="@dimen/x10"
-                    android:layout_marginTop="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
                     android:background="@color/app_font_dark_gray"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -182,29 +182,30 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:gravity="center"
-                    android:padding="@dimen/x10"
+                   android:paddingStart="@dimen/x10"
                     android:text="@string/tesk_summary"
                     android:textColor="@color/app_red"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_normal_dark"/>
 
                 <com.ingic.ezhalbatek.ui.views.AnyTextView
                     android:id="@+id/txtTask"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
                     android:layout_marginEnd="@dimen/x10"
                     android:layout_marginStart="@dimen/x10"
+                    android:paddingTop="@dimen/x5"
                     android:text="@string/lorem_ipsum"
-                    android:textSize="@dimen/x16"
+                    android:textSize="@dimen/x14"
                     app:typeface="@string/font_normal_dark"/>
 
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginBottom="@dimen/x10"
-                    android:layout_marginTop="@dimen/x10"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
                     android:background="@color/app_font_dark_gray"/>
 
                 <LinearLayout
@@ -222,7 +223,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/technician_name"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -233,7 +234,7 @@
                         android:gravity="center"
                         android:text="Graham Bill"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -253,7 +254,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/technician_number"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -264,7 +265,7 @@
                         android:gravity="center"
                         android:text="01"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_bold"/>
                 </LinearLayout>
 
@@ -272,6 +273,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/x5"
+                    android:layout_marginBottom="@dimen/x5"
                     android:orientation="horizontal">
 
                     <com.ingic.ezhalbatek.ui.views.AnyTextView
@@ -284,7 +286,7 @@
                         android:paddingStart="@dimen/x10"
                         android:text="@string/rating"
                         android:textColor="@color/app_red"
-                        android:textSize="@dimen/x16"
+                        android:textSize="@dimen/x14"
                         app:typeface="@string/font_normal_dark"/>
 
                     <com.ingic.ezhalbatek.ui.views.CustomRatingBar
