--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_above="@+id/btn_english"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/x70"
         android:src="@drawable/logo"
         />
@@ -20,6 +22,7 @@
         android:layout_marginEnd="@dimen/x20"
         android:layout_marginStart="@dimen/x20"
         android:layout_marginTop="@dimen/x40"
+        android:layout_centerInParent="true"
         android:background="@drawable/button_red"
         android:text="@string/english"
         android:textAllCaps="false"
@@ -29,13 +32,14 @@
         android:id="@+id/btn_arabic"
         android:layout_width="match_parent"
         android:layout_height="@dimen/x40"
+        android:layout_below="@+id/btn_english"
         android:layout_marginBottom="@dimen/x20"
         android:layout_marginEnd="@dimen/x20"
         android:layout_marginStart="@dimen/x20"
         android:layout_marginTop="@dimen/x10"
-        android:background="@drawable/button_gray"
+        android:background="@drawable/button_gray_dark"
         android:text="@string/arabic"
         android:textAllCaps="false"
         android:textColor="@color/white"/>
 
-</LinearLayout>
+</RelativeLayout>
