--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -165,7 +165,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="bottom"
             android:layout_marginTop="@dimen/x10"
-            android:background="@drawable/button_gray"
+            android:background="@drawable/button_gray_dark"
             android:text="@string/guest_user"
             android:textAllCaps="false"
             android:textColor="@color/white"
