--- a/app/src/main/res/layout/fragment_service_detail.xml
+++ b/app/src/main/res/layout/fragment_service_detail.xml
@@ -1,7 +1,262 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:orientation="vertical">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="@dimen/x10">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="2dp"
+            app:cardMaxElevation="4dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="@dimen/x10"
+                    android:gravity="center"
+                    android:paddingEnd="@dimen/x10"
+                    android:paddingStart="@dimen/x10"
+                    android:text="@string/job_title_head"
+                    android:textColor="@color/app_red"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:id="@+id/txtDuration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+android:layout_marginTop="@dimen/x5"
+                    android:gravity="center"
+                    android:paddingEnd="@dimen/x10"
+                    android:paddingStart="@dimen/x10"
+                    android:text="Short Circuit Problem"
+                    android:textColor="@color/app_font_dark_gray"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
+                    android:background="@color/app_font_dark_gray"/>
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:gravity="center"
+                    android:paddingEnd="@dimen/x10"
+                    android:paddingStart="@dimen/x10"
+                    android:text="@string/jobs"
+                    android:textColor="@color/app_red"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:id="@+id/txtJobs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                  android:layout_marginTop="@dimen/x5"
+                    android:layout_marginEnd="@dimen/x10"
+                    android:layout_marginStart="@dimen/x10"
+                    android:text="Total Electricity failure/breakdown"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
+                    android:background="@color/app_font_dark_gray"/>
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:gravity="center"
+                    android:paddingEnd="@dimen/x10"
+                    android:paddingStart="@dimen/x10"
+                    android:text="@string/additional_note"
+                    android:textColor="@color/app_red"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+                <com.ingic.ezhalbatek.ui.views.AnyTextView
+                    android:id="@+id/txtAdditionalNote"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/x10"
+                    android:layout_marginStart="@dimen/x10"
+                    android:layout_marginTop="@dimen/x5"
+                    android:text="@string/lorem_ipsum"
+                    android:textSize="@dimen/x14"
+                    app:typeface="@string/font_normal_dark"/>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:layout_marginTop="@dimen/x5"
+                    android:background="@color/app_font_dark_gray"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.ingic.ezhalbatek.ui.views.AnyTextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:paddingEnd="@dimen/x5"
+                        android:paddingStart="@dimen/x10"
+                        android:text="@string/technician_name"
+                        android:textColor="@color/app_red"
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_normal_dark"/>
+
+                    <com.ingic.ezhalbatek.ui.views.AnyTextView
+                        android:id="@+id/txtTechnicianName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:text="Graham Bill"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_bold"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/x5"
+                    android:orientation="horizontal">
+
+                    <com.ingic.ezhalbatek.ui.views.AnyTextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:paddingEnd="@dimen/x5"
+                        android:paddingStart="@dimen/x10"
+                        android:text="@string/technician_number"
+                        android:textColor="@color/app_red"
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_normal_dark"/>
+
+                    <com.ingic.ezhalbatek.ui.views.AnyTextView
+                        android:id="@+id/txtTechnicianNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:text="01"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_bold"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/Container_rate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/x5"
+                    android:layout_marginBottom="@dimen/x5"
+                    android:orientation="horizontal">
+
+                    <com.ingic.ezhalbatek.ui.views.AnyTextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:paddingEnd="@dimen/x5"
+                        android:paddingStart="@dimen/x10"
+                        android:text="@string/rating"
+                        android:textColor="@color/app_red"
+                        android:textSize="@dimen/x14"
+                        app:typeface="@string/font_normal_dark"/>
+
+                    <com.ingic.ezhalbatek.ui.views.CustomRatingBar
+                        android:id="@+id/rbRating"
+                        android:layout_width="@dimen/x120"
+                        android:layout_height="@dimen/x20"
+                        android:alpha="0.7"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        app:onlyForDisplay="true"
+                        app:starHalf="@drawable/rate_star_selected"
+                        app:starOn="@drawable/rate_star_selected"
+                        app:stars="1"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ContainerButtons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/x10"
+                    android:visibility="gone"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btnCall"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="bottom"
+                        android:layout_marginEnd="@dimen/x5"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_red"
+                        android:text="@string/call_technician"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        />
+
+                    <Button
+                        android:id="@+id/btnCancel"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="bottom"
+                        android:layout_marginStart="@dimen/x5"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_gray"
+                        android:text="@string/cancel_Job"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+
+    </LinearLayout>
+</ScrollView>
