--- a/app/src/main/res/layout/fragment_setting_fragment.xml
+++ b/app/src/main/res/layout/fragment_setting_fragment.xml
@@ -312,6 +312,14 @@
 
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginBottom="@dimen/x3"
+        android:layout_marginLeft="@dimen/x10"
+        android:layout_marginRight="@dimen/x10"
+        android:alpha="0.6"
+        android:background="@color/app_font_gray"/>
 
 
 </LinearLayout>
