--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,6 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:padding="@dimen/x20"
+
               android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/x10"
-            android:src="@drawable/email"/>
+            android:src="@drawable/username"/>
 
         <com.ingic.ezhalbatek.ui.views.AnyEditTextView
             android:id="@+id/edt_name"
@@ -141,7 +142,7 @@
             android:layout_marginStart="@dimen/x10"
             android:src="@drawable/address"/>
 
-        <com.ingic.ezhalbatek.ui.views.AutoCompleteLocation
+        <com.ingic.ezhalbatek.ui.views.AnyEditTextView
             android:id="@+id/edtCity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -149,7 +150,7 @@
             android:layout_marginStart="@dimen/x10"
             android:background="@null"
             android:maxLines="1"
-            android:hint="@string/phone"
+            android:hint="@string/city"
             android:imeOptions="actionNext"
             app:hint_text="@string/city"
             android:inputType="text"
@@ -198,7 +199,7 @@
         android:layout_gravity="bottom"
         android:layout_marginTop="@dimen/x10"
         android:background="@drawable/button_red"
-        android:text="@string/sign_up"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="@color/white"
         />
