--- a/app/src/main/res/layout/fragment_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_verify_phone.xml
@@ -3,6 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+
+
               android:orientation="vertical">
 
     <ImageView
@@ -37,23 +39,16 @@
 
     <com.ingic.ezhalbatek.ui.views.PinEntryEditText
         android:id="@+id/txt_pin_entry"
-        android:layout_width="@dimen/x300"
+        android:layout_width="@dimen/x250"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/x20"
-        android:layout_marginEnd="@dimen/x20"
-        android:layout_marginStart="@dimen/x20"
-        android:layout_marginTop="@dimen/x20"
+        android:layout_margin="@dimen/x20"
         android:background="@null"
         android:cursorVisible="false"
         android:digits="1234567890"
-        android:editable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="true"
         android:imeOptions="actionDone"
         android:inputType="number"
         android:maxLength="4"
-
         android:paddingTop="@dimen/x40"
         android:text="1234"
         android:textColor="@color/black"
