--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,11 +42,12 @@
     <color name="sidemenu">#62A6D8</color>
     <color name="default_text">#212121</color>
     <color name="default_hint_text">#757575</color>
-    <color name="app_red">#D8382F</color>
+    <color name="app_red">#c74b45</color>
     <color name="app_gray_brown">#5B5657</color>
     <color name="app_font_gray">#5f5b5c</color>
     <color name="app_font_dark_gray">#494648</color>
     <color name="app_blue">#3d5fe8</color>
     <color name="app_font_black">#282828</color>
     <color name="camera_color">#d2d2d2</color>
+    <color name="app_button_grey">#9b9b9b</color>
 </resources>
