--- a/app/src/main/res/layout/activity_dock.xml
+++ b/app/src/main/res/layout/activity_dock.xml
@@ -19,15 +19,19 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-             />
+            />
 
         <FrameLayout
             android:id="@+id/mainFrameLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:paddingTop="@dimen/x50"
+            android:layout_below="@+id/header_main"
             android:layout_centerHorizontal="true" >
         </FrameLayout>
+
+
+
+
 
         <ProgressBar
             android:id="@+id/progressBar"
